changes before merging my branch with the main branch

--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -95,7 +95,7 @@
                 <select name="update-movie_title" id="movieSelect">
                     <option value="update-order-id">Select a Movie</option>
                     {{#each data}}
-                    <option value="{{this.movie_title}}">{{this.movie_title}}</option>
+                    <option value="{{this.movie_id}}">{{this.movie_title}}</option>
                     {{/each}}
                 </select>
             </div>
