--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -99,8 +99,10 @@
                     {{/each}}
                 </select>
             </div>
-
-
+            <div>
+                <label for="update-movie">movie title: </label>
+                <input type="text" name="update-movie" id="update-movie">
+            </div>
             <div>
                 <label for="input-release_date">Year of Release: </label>
                 <input type="number" name="input-release_date" id="input-release_date-update">
