Added all the add, delete, update, and search functions for locations, available_rentals, and ordered_movies. Also changed the app.js, movies.hbs, and update_movies.js to fit what they were like with the previous version. Updated the text with movies.hbs update box to fit what the user would be doing.

--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -100,7 +100,7 @@
                 </select>
             </div>
             <div>
-                <label for="update-movie">Movie Title: </label>
+                <label for="update-movie">Change Movie Title: </label>
                 <input type="text" name="update-movie" id="update-movie">
             </div>
             <div>
