--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -100,7 +100,7 @@
                 </select>
             </div>
             <div>
-                <label for="update-movie">movie title: </label>
+                <label for="update-movie">Change Movie Title: </label>
                 <input type="text" name="update-movie" id="update-movie">
             </div>
             <div>
