Citations, comments, and white space clean up.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,15 @@
-{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main/Step%203%20-%20Integrating%20a%20Templating%20Engine%20(Handlebars) --}}
 {{!-- Customers Page --}}
-
-
+{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
 
 <main>
 <h2>Customers</h2>
 <p>&nbsp;</p>
 
-{{!-- The Data from our Database --}}
-{{!-- Create a table --}}
+{{!-- Create a table for the database --}}
 <div id = "browse" class = "data-table">
     <table id= "customer-table" border="1" cellpadding="5">
-
         {{!-- Header section --}}
         <thead>
-
             {{!-- For just the first row, we print each key of the row object as a header cell so we
             know what each column means when the page renders --}}
             <tr>
@@ -29,8 +24,7 @@
 
         {{!-- Body section --}}
         <tbody>
-
-            {{!-- For each row, print the id, first_name, last_name, etc, in order --}}
+            {{!-- For each row, insert the table data --}}
             {{!-- Square brackets refer to the alias names of the SELECT query --}}
             {{#each data}}
             <tr data-value={{this.[ID]}}>
@@ -107,11 +101,10 @@
                 <input type="submit" value="Add Customer">
             </div>
         </form>
-        {{!-- Embed javascript to handle the DOM manipulation and AJAX request --}}
         <script src="./js/add_customer.js"></script>
     </div> <!-- End of Add Customer Column -->
 
-
+<!-- Update customer form -->
 <div class = "column">
         <form id="update-customer-form-ajax">
         <h3>Update Customer</h3>
@@ -173,12 +166,11 @@
         </form>
     <script src="./js/update_customer.js"></script>
 </div> <!-- End of update Customer Column -->
-
 </div> <!-- End of Row -->
 
 
-
 <div class = "row">
+    <!-- Search customer form -->
     <div class = "column">
     <form id="search-customer-html" method='GET' action='/'>
         <h3>Search Customers</h3>
@@ -192,7 +184,5 @@
         </div>
     </form>
 </div> <!-- End of Search column -->
-
 </div><!-- End of Row -->
-
 </main>
