--- a/views/available_rentals.hbs
+++ b/views/available_rentals.hbs
@@ -1,19 +1,16 @@
-{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main/Step%203%20-%20Integrating%20a%20Templating%20Engine%20(Handlebars) --}}
 {{!-- Available_Rentals --}}
+{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+
 
 <main>
-
 <h2>Available Rentals</h2>
 <p>&nbsp;</p>
 
-{{!-- The Data from our Database --}}
-{{!-- Create a table --}}
+{{!-- Create a table for the database --}}
 <div id = "browse" class = "data-table">
     <table id= "available-rentals-table" border="1" cellpadding="5">
-
         {{!-- Header section --}}
         <thead>
-
             {{!-- For just the first row, we print each key of the row object as a header cell so we
             know what each column means when the page renders --}}
             <tr>
@@ -28,8 +25,8 @@
 
         {{!-- Body section --}}
         <tbody>
-
-            {{!-- For each row, print the id, first_name, last_name, etc, in order --}}
+            {{!-- For each row, insert the table data --}}
+            {{!-- Square brackets refer to the alias names of the SELECT query --}}
             {{#each data}}
             <tr data-value={{this.[ID]}}>
                 <td>{{this.[ID]}}</td>
@@ -43,7 +40,6 @@
     </table>
     <script src="./js/delete_available_rentals.js"></script>
 </div>
-
 
 
 
@@ -81,8 +77,7 @@
                 <input type="submit" value="Add Available Rental">
             </div>
         </form>
-        {{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
         <script src="./js/add_available_rentals.js"></script>
     </div> <!-- End of Add Availalbe Rentals Column -->
-
 </div> <!-- End of Row -->
+</main>
