--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,19 +1,16 @@
-{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main/Step%203%20-%20Integrating%20a%20Templating%20Engine%20(Handlebars) --}}
 {{!-- Orders Page --}}
+{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+
 
 <main>
-
 <h2>Orders</h2>
 <p>&nbsp;</p>
 
-{{!-- The Data from our Database --}}
-{{!-- Create a table --}}
+{{!-- Create a table for the database --}}
 <div id = "browse" class = "data-table">
     <table id= "orders-table" border="1" cellpadding="5">
-
         {{!-- Header section --}}
         <thead>
-
             {{!-- For just the first row, we print each key of the row object as a header cell so we
             know what each column means when the page renders --}}
             <tr>
@@ -28,8 +25,8 @@
 
         {{!-- Body section --}}
         <tbody>
-
-            {{!-- For each row, print the id, first_name, last_name, etc, in order --}}
+            {{!-- For each row, insert the table data --}}
+            {{!-- Square brackets refer to the alias names of the SELECT query --}}
             {{#each data}}
             <tr data-value={{this.[ID]}}>
                 <td>{{this.[ID]}}</td>
@@ -95,7 +92,6 @@
                 <input type="submit" value="Add Order">
             </div>
         </form>
-        {{!-- Embed javascript to handle the DOM manipulation and AJAX request --}}
         <script src="./js/add_order.js"></script>
     </div> <!-- End of Add Order Column -->
 
@@ -157,7 +153,6 @@
             <input type="submit" value="Update Order">
         </div>
     </form>
-    {{!-- Embed javascript to handle the DOM manipulation and AJAX request --}}
     <script src="./js/update_order.js"></script>
 </div><!-- End of update Order Column -->
 </div> <!-- End of Row -->
@@ -165,6 +160,7 @@
 
 
 <div class = "row">
+    <!-- filter Customer Column -->
     <div class = "column">
         <form id="filter-customer-order-html" method='GET' action='/orders/customer_id'>
         <h3>Filter by Customer</h3>
@@ -183,9 +179,10 @@
             <a href='/'><button>Reset Results</button></a>
         </div>
     </form>
-    </div><!-- End of filter Customer Order Column -->
+    </div><!-- End of filter Customer Column -->
 
 
+    <!-- Filter location Column -->
     <div class = "column">
         <form id="filter-location-order-html" method='GET' action='/orders/location_id'>
         <h3>Filter by Location</h3>
@@ -205,7 +202,6 @@
             <a href='/'><button>Reset Results</button></a>
         </div>
     </form>
-    </div><!-- End of filter Location Order Column -->
+    </div><!-- End of filter Location Column -->
 </div><!-- End of Row -->
-
 </main>
