--- a/views/available_rentals.hbs
+++ b/views/available_rentals.hbs
@@ -79,5 +79,54 @@
         </form>
         <script src="./js/add_available_rentals.js"></script>
     </div> <!-- End of Add Availalbe Rentals Column -->
+
+
+
+<!-- Update form -->
+<div class= "column">
+    <form id="update-avail-form-ajax">
+        <h3>Update Available Rental</h3>
+        <div class = "form-inputs">
+            <div>
+                <label for="update-avail-rental">ID: </label>
+                <select name="update-avail-rental" id="update-avail-rental" required="required" onchange="autoFill()">
+                    <option value="">Select an Available Rental</option>
+                    {{#each data}}
+                    <option value="{{this.[ID]}}">{{this.[ID]}}</option>
+                    {{/each}}
+                </select>
+            </div>
+
+            <div>
+                <label for="update-avail-movie-id">Movie: </label>
+                    <select name="update-avail-movie-id" id="update-avail-movie-id">
+                        <option value=''>NULL</option>
+                        {{#each movies}}
+                            <option value="{{this.movie_id}}">{{this.movie_title}}</option>
+                        {{/each}}
+                </select>
+            </div>
+
+            <div>
+                <label for="update-avail-location-id">Location: </label>
+                <select name="update-avail-location-id" id="update-avail-location-id">
+                    <option value=''>Select a Location</option>
+                    {{#each locations}}
+                    <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
+                        {{this.location_city}}, {{this.location_state}}</option>
+                    {{/each}}
+                </select>
+            </div>
+
+            <div>
+                <label for="update-available-copies">Available Copies: </label>
+                <input type="number" value="0" name="update-available-copies" id="update-available-copies" required="required">
+            </div>
+
+            <input type="submit" value="Update Available Rental">
+        </div>
+    </form>
+    <script src="./js/update_available_rentals.js"></script>
+</div><!-- End of update Column -->
 </div> <!-- End of Row -->
 </main>
