Improved code citations

--- a/views/available_rentals.hbs
+++ b/views/available_rentals.hbs
@@ -1,5 +1,8 @@
 {{!-- Available_Rentals --}}
-{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+{{!-- Code Citations --}}
+{{!-- Date: 11/15/2022 --}}
+{{!-- Referenced structure and data-table from: --}}
+{{!-- Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
 
 
 <main>
