--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,9 @@
 {{!-- Customers Page --}}
-{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+{{!-- Code Citations --}}
+{{!-- Date: 11/15/2022 --}}
+{{!-- Referenced structure and data-table from: --}}
+{{!-- Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+
 
 <main>
 <h2>Customers</h2>
