--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,5 +1,8 @@
 <!-- main.hbs-->
-{{!-- Referenced from: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+{{!-- Code Citations --}}
+{{!-- Date: 11/15/2022 --}}
+{{!-- Referenced structure from: --}}
+{{!-- Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
 
 
 <!DOCTYPE html>
