--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,3 +1,10 @@
+{{!-- Movies Page --}}
+{{!-- Code Citations --}}
+{{!-- Date: 11/15/2022 --}}
+{{!-- Referenced structure and data-table from: --}}
+{{!-- Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app --}}
+
+
 <main>
 
 <h2>Movies</h2>
