--- a/views/available_rentals.hbs
+++ b/views/available_rentals.hbs
@@ -33,8 +33,8 @@
             {{#each data}}
             <tr data-value={{this.[ID]}}>
                 <td>{{this.[ID]}}</td>
-                <td>{{this.[MovieTitle]}}</td>
-                <td>{{this.[Location]}}</td>
+                <td data-movie_title="{{this.[MovieTitle]}}">{{this.[MovieTitle]}}</td>
+                <td data-location="{{this.[Location]}}">{{this.[Location]}}</td>
                 <td>{{this.[Available Copies]}}</td>
                 <td><button onclick="deleteAvailableRental({{this.[ID]}})">Delete</button></td>                                                    
             </tr>
