Included Andys Locations

--- a/views/locations.hbs
+++ b/views/locations.hbs
@@ -6,7 +6,7 @@
 
 
 <main>
-<h2>locations</h2>
+<h2>Store Locations</h2>
 <p>&nbsp;</p>
 
 {{!-- The Data from our Database --}}
@@ -76,7 +76,7 @@
 
                 <div>
                     <label for="input-location_phone_number">Phone Number: </label>
-                    <input type="text" name="input-location_phone_number" id="input-location_phone_number" maxlength="12">
+                    <input type="number" name="input-location_phone_number" id="input-location_phone_number" maxlength="12">
                 </div>
 
                 <input type="submit" value="Add Store">
