Made more form fields required to submit

--- a/views/available_rentals.hbs
+++ b/views/available_rentals.hbs
@@ -64,7 +64,7 @@
                 <div>
                     <label for="input-avail-location-id">Location: </label>
                     <select name="input-avail-location-id" id="input-avail-location-id" required="required">
-                        <option value="">Select a location</option>
+                        <option value="">Select a Location</option>
                         <option value=''>NULL</option>
                         {{#each locations}}
                         <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
@@ -89,7 +89,7 @@
 <!-- Update form -->
 <div class= "column">
     <form id="update-avail-form-ajax">
-        <h3>Update Available Rental</h3>
+        <h3>Update an Available Rental</h3>
         <div class = "form-inputs">
             <div>
                 <label for="update-avail-rental">ID: </label>
@@ -114,7 +114,7 @@
             <div>
                 <label for="update-avail-location-id">Location: </label>
                 <select name="update-avail-location-id" id="update-avail-location-id" required="required">
-                    <option value="">Select a location</option>
+                    <option value="">Select a Location</option>
                     <option value=''>NULL</option>
                     {{#each locations}}
                     <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
