--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -102,7 +102,7 @@
 <!-- Update order form -->
 <div class= "column">
     <form id="update-order-form-ajax">
-        <h3>Update Order</h3>
+        <h3>Update an Order</h3>
         <div class = "form-inputs">
             <div>
                 <label for="update-order-id">Order: </label>
@@ -170,7 +170,7 @@
         <div class = "form-inputs">
             <div>
                 <label for="filter-customer-id">Customer: </label>
-                <select name="filter" id="customer_id">
+                <select name="filter" id="customer_id" required="required">
                     <option value="">Select a Customer</option>
                     {{#each customers}}
                     <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
@@ -192,7 +192,7 @@
         <div class = "form-inputs">
             <div>
                 <label for="filter-location-id">Location: </label>
-                <select name="filter" id="location_id">
+                <select name="filter" id="location_id" required="required">
                     <option value="">Select a Location</option>
                     {{#each locations}}
                     <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
@@ -201,7 +201,7 @@
                 </select>
             </div>
 
-            <input type="submit" value="Filter location Order">
+            <input type="submit" value="Filter Location Order">
             <a href='/'><button>Reset Results</button></a>
         </div>
     </form>
